--- a/JS-Mastery/Intro/index.html
+++ b/JS-Mastery/Intro/index.html
@@ -3,9 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="./css/index.css" />
+    <title>💻 JavaScript Mastery</title>
   </head>
   <body>
-    <script src="script.js"></script>
+    <header>
+      <h1>JavaScript Crash Course 2021 - Master JavaScript in One Video!</h1>
+    </header>
+    <script type="module" src="./js/index.js"></script>
   </body>
 </html>
